--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -328,3 +329,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+#api docs
+api docs/
